# esp32-btstack-ctkd-test

./: .clang-format  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  gatt_dice.c  gatt_dice.gatt
